--- a/english.html
+++ b/english.html
@@ -469,6 +469,8 @@ Error message and password prompt
 
 <li>Eva Coen</li>
 
+<li>Eva narrates 01</li>
+
 <li>Eva`s family tree</li>
 
 <li>Exile</li>
@@ -502,6 +504,8 @@ Error message and password prompt
 <li>Garlic and herbs butter</li>
 
 <li>Gassisted living</li>
+
+<li>Genejuice</li>
 
 <li>Genevieve</li>
 
@@ -811,6 +815,8 @@ Error message and password prompt
 
 <li>Our Father</li>
 
+<li>Our grandma</li>
+
 <li>Outer sisters</li>
 
 <li>Ovened tomatoes</li>
@@ -921,6 +927,8 @@ Error message and password prompt
 
 <li>Sex Education</li>
 
+<li>Shalom</li>
+
 <li>Shalom Hanoch</li>
 
 <li>Shoretzky</li>
@@ -969,7 +977,11 @@ Error message and password prompt
 
 <li>Tel Aviv Desk</li>
 
+<li>Tethys ocean</li>
+
 <li>The archive's trustees</li>
+
+<li>The barber shop</li>
 
 <li>The baristas here</li>
 
@@ -1017,6 +1029,8 @@ Error message and password prompt
 
 <li>The lab</li>
 
+<li>The lawyer</li>
+
 <li>The neighbor`s grass</li>
 
 <li>The newspaper desk</li>
@@ -1034,8 +1048,6 @@ Error message and password prompt
 <li>The team</li>
 
 <li>The Wire</li>
-
-<li>the wishing star 01</li>
 
 <li>They cut down trees</li>
 
@@ -1118,6 +1130,8 @@ Error message and password prompt
 <li>When they sleep</li>
 
 <li>White rice with pine nuts</li>
+
+<li>Wishing star 01</li>
 
 <li>Wishing star 04</li>
 
@@ -9024,7 +9038,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200322152336559" title="$:/temp/search">
+<div created="20161023184814872" modified="20200322163504771" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9194,7 +9208,7 @@ It isn't nice to see a shutdown radio station, but when you live here in the ghe
 
  &lt;&lt;heblink [[420]]&gt;&gt;</pre>
 </div>
-<div created="20200115163447032" modified="20200217121354541" tags="Metafiction [[The global village]]" title="9-side-wishing-star">
+<div created="20200115163447032" modified="20200322163427054" tags="Metafiction [[The global village]]" title="9-side-wishing-star">
 <pre>!!![[Eva]]:
 
 This is a story I wrote in the winter of 2016, it begins with visiting Yoyo and Gura in Paris, for the Christmas dinner 2015 
@@ -9206,6 +9220,11 @@ This is a story I wrote in the winter of 2016, it begins with visiting Yoyo and 
 For everything there is a season, and a time for every matter under heaven//:
 
 coming soon as possible
+
+
+&lt;&lt;list-links filter:&quot;[tag[9-side-wishing-star]]&quot;&gt;&gt;
+
+
 
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
@@ -9519,7 +9538,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200322161622330" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200322170250126" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -10524,6 +10543,18 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
+<div created="20200322162307179" modified="20200322162854093" tags="[[Gura`s tale]]" title="Eva narrates 01">
+<pre>[img[pictures/hasipoor-1.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[אווה מספרת  01]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200217174816634" modified="20200217174955087" tags="[[The estate]] Children" title="Eva`s family tree">
 <pre>[img[pictures/eva-garinit.jpg]]
 
@@ -10725,11 +10756,20 @@ Or as Alfred used to say:
 </pre>
 </div>
 <div created="20200322160521331" modified="20200322160658923" tags="HH Houses" title="Gassisted living">
-<pre>
-[img[pictures/diyur-mugaz.jpg]]
+<pre>[img[pictures/diyur-mugaz.jpg]]
 
 
  &lt;&lt;heblink [[דיור מוגז]]&gt;&gt;</pre>
+</div>
+<div created="20200322165333453" modified="20200322165640788" tags="HH" title="Genejuice">
+<pre>
+[img[pictures/mizperesh.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מיצפרש]]&gt;&gt;
+</pre>
 </div>
 <div created="20200213145354960" modified="20200219171845530" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]]" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
@@ -10758,8 +10798,7 @@ She loves us and take care of us all. In the end of every working day she moves 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
 <div created="20200322160112085" modified="20200322160317256" tags="HH Houses" title="Gezuntheights">
-<pre>
-[img[pictures/JOI7qxUSCqd04xay.jpg]]
+<pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
 
 
@@ -11326,8 +11365,7 @@ In order of understanding more, I recommend :
  &lt;&lt;heblink [[אירי טוענת]]&gt;&gt;</pre>
 </div>
 <div created="20200322154142968" modified="20200322154328920" tags="Children Houses" title="Iry's Hawaiian pineapple house">
-<pre>
-[img[pictures/AMMWBcSauRNlvNUR.JPG]]
+<pre>[img[pictures/AMMWBcSauRNlvNUR.JPG]]
 
 
 
@@ -11418,8 +11456,7 @@ I say that I love Jeff Bridges, but more than all he's the [[dude|https://www.im
 </pre>
 </div>
 <div created="20200322155655155" modified="20200322155835396" tags="Houses Mothers" title="Joe and Norma">
-<pre>
-[img[pictures/jo-ve-norma.jpg]]
+<pre>[img[pictures/jo-ve-norma.jpg]]
 
 
 
@@ -11714,8 +11751,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200322161519320" modified="20200322161704222" tags="Houses" title="Life style">
-<pre>
-[img[pictures/lifestyle.jpg]]
+<pre>[img[pictures/lifestyle.jpg]]
 
 
  &lt;&lt;heblink [[לייף סטייל]]&gt;&gt;
@@ -12247,8 +12283,7 @@ The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, n
 </pre>
 </div>
 <div created="20200322153745866" modified="20200322153929609" tags="Metafiction Children" title="Mom, grandma and I">
-<pre>
-[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
+<pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
 
 
 
@@ -12384,8 +12419,7 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 </pre>
 </div>
 <div created="20200322154536842" modified="20200322154719826" tags="[[Menopause sisters]]" title="Non-hunky-dory">
-<pre>
-[img[pictures/lo-hevremaniyot.jpg]]
+<pre>[img[pictures/lo-hevremaniyot.jpg]]
 
 
 
@@ -12536,6 +12570,15 @@ I've met my only father, after many years we haven't met. This picture was taken
 
 
  &lt;&lt;heblink [[אבינו]]&gt;&gt;</pre>
+</div>
+<div created="20200322170149384" modified="20200322170314234" tags="[[The Baumans]] Mothers Houses" title="Our grandma">
+<pre>
+[img[pictures/savta-shelanu.jpg]]
+
+
+
+ &lt;&lt;heblink [[סבתא שלנו]]&gt;&gt;
+</pre>
 </div>
 <div created="20200212163427451" modified="20200218200009285" tags="[[Monkeys with car keys]] [[How many songs can you even invent at all]]" title="Outer sisters">
 <pre>[img[pictures/ahayot-huz.jpg]]
@@ -13087,8 +13130,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 </pre>
 </div>
 <div created="20200322153246231" modified="20200322153527675" tags="[[Dreams that we've dreamt]]" title="Self-made backpacks for shopping at the market">
-<pre>
-[img[pictures/tik-kniyot.jpg]]
+<pre>[img[pictures/tik-kniyot.jpg]]
 
 
 
@@ -13124,6 +13166,15 @@ Everything will be clarified''
 
 
  &lt;&lt;heblink [[חינוך מיני]]&gt;&gt;
+</pre>
+</div>
+<div created="20200322163727748" modified="20200322163956274" tags="HH" title="Shalom">
+<pre>
+[img[pictures/shalom.jpg]]
+
+
+
+ &lt;&lt;heblink [[שלום]]&gt;&gt;
 </pre>
 </div>
 <div created="20200225182640202" modified="20200225182754249" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Shalom Hanoch">
@@ -13426,12 +13477,32 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 
 </pre>
 </div>
+<div created="20200322165857658" modified="20200322170009109" tags="HH" title="Tethys ocean">
+<pre>
+[img[pictures/tethys-sea.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[ים טתיס]]&gt;&gt;
+</pre>
+</div>
 <div created="20200213163836811" modified="20200213165310346" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
 <pre>[img[pictures/neemaney.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[The archive's trustees]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
+</div>
+<div created="20200322164751976" modified="20200322165142324" tags="HH" title="The barber shop">
+<pre>
+[img[pictures/hamispara.jpg]]
+
+
+
+ &lt;&lt;heblink [[מספרה]]&gt;&gt;
+</pre>
 </div>
 <div created="20200226072300277" modified="20200226072654606" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The baristas here">
 <pre>[img[pictures/barista.jpg]]
@@ -13533,8 +13604,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 </pre>
 </div>
 <div created="20200322161201000" modified="20200322161331835" tags="Houses Metafiction" title="The Clinique">
-<pre>
-[img[pictures/haklinika.jpg]]
+<pre>[img[pictures/haklinika.jpg]]
 
 
 
@@ -13696,8 +13766,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 </pre>
 </div>
 <div created="20200322160856797" modified="20200322161001897" tags="HH Houses" title="The Hostel">
-<pre>
-[img[pictures/the-hostel.jpg]]
+<pre>[img[pictures/the-hostel.jpg]]
 
 
 
@@ -13722,6 +13791,16 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
  &lt;&lt;heblink [[המעבדה]]&gt;&gt;
 </pre>
+</div>
+<div created="20200322164140601" modified="20200322164320569" tags="HH" title="The lawyer">
+<pre>
+[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[עורכת הדין]]&gt;&gt;</pre>
 </div>
 <div created="20200308104605620" modified="20200308104918283" tags="[[Here in the Ghetto]] Houses [[The Baumans]] Metafiction" title="The neighbor`s grass">
 <pre>[img[pictures/hadeshe-shel-hashachen.jpg]]
@@ -14049,14 +14128,6 @@ What does [[Lester Freamon|https://www.imdb.com/name/nm0676370/?ref_=tt_cl_t9]] 
 
 
  &lt;&lt;heblink [[הסמויה]]&gt;&gt;</pre>
-</div>
-<div created="20200115161700360" modified="20200115162215492" tags="Houses 9-side-wishing-star" title="the wishing star 01">
-<pre>[img[pictures/hadira.jpg]]
-
-''Yoyo's first sketch of the empty apartment''
-
-
- &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
 </div>
 <div created="20200215093552197" modified="20200215094542487" tags="[[In the Animal Farm]]" title="They cut down trees">
 <pre>[img[pictures/kortim-ezim.jpg]]
@@ -14461,6 +14532,14 @@ they also said tape''
 
 
  &lt;&lt;heblink [[אורז לבן עם צנוברים]]&gt;&gt;</pre>
+</div>
+<div created="20200115161700360" modified="20200322163459650" tags="Houses 9-side-wishing-star" title="Wishing star 01">
+<pre>[img[pictures/hadira.jpg]]
+
+''Yoyo's first sketch of the empty apartment''
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
 </div>
 <div created="20200212154809949" modified="20200212160231559" tags="9-side-wishing-star Laundry" title="Wishing star 04">
 <pre>[img[pictures/ela.jpg]]
