--- a/index.html
+++ b/index.html
@@ -9192,7 +9192,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="HH [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9212,7 +9212,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200322161541007" title="$:/temp/search">
+<div created="20161023184814872" modified="20200322170541255" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9728,7 +9728,7 @@ well,
 
 &lt;&lt;englink [[Eva Coen]]&gt;&gt;</pre>
 </div>
-<div created="20170722121850671" modified="20170728185508522" tags="[[הסיפור על גורה]]" title="אווה מספרת  01">
+<div created="20170722121850671" modified="20200322163006130" tags="[[הסיפור על גורה]]" title="אווה מספרת  01">
 <pre>[img[pictures/hasipoor-1.jpg]]
 
 
@@ -9761,7 +9761,7 @@ well,
 
 
 
-</pre>
+&lt;&lt;englink [[Eva narrates 01]]&gt;&gt;</pre>
 </div>
 <div created="20170723063745066" modified="20200215174257803" tags="[[הסיפור על גורה]]" title="אווה מספרת 02">
 <pre>[img[pictures/hasipoor-2.jpg]]
@@ -10601,7 +10601,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200322161733158" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200322170403649" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -12001,7 +12001,7 @@ Is where I want to be
 
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
-<div created="20200303102502696" modified="20200320101402632" tags="[[קופים ממונעים]] ילדים סגירים" title="דור הנפש">
+<div created="20200303102502696" modified="20200322170527475" tags="[[קופים ממונעים]] ילדים סגירים" title="דור הנפש">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
@@ -13854,9 +13854,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Single parent children]]&gt;&gt;</pre>
 </div>
-<div created="20161030110441328" modified="20181023115000502" tags="HH" title="ים טתיס">
+<div created="20161030110441328" modified="20200322170108509" tags="HH" title="ים טתיס">
 <pre>[img[pictures/tethys-sea.jpg]]
-מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
+
+
+
+מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].
+
+
+
+
+&lt;&lt;englink [[Tethys ocean]]&gt;&gt;</pre>
 </div>
 <div created="20171210203415794" modified="20200304125015000" tags="[[קופים ממונעים]]" title="יסודי או ocd">
 <pre>[img[pictures/spiritual-level.jpg]]
@@ -14005,7 +14013,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Legume balls with coconut curry sauce]]&gt;&gt;</pre>
 </div>
-<div created="20161112194346716" modified="20200215174442342" tags="[[כוכב המשאלות בעל תשע הצלעות]] בתים" title="כוכב המשאלות 01">
+<div created="20161112194346716" modified="20200322163535860" tags="[[כוכב המשאלות בעל תשע הצלעות]] בתים" title="כוכב המשאלות 01">
 <pre> 
 [img[pictures/hadira.jpg]]
 ''סקיצה ראשונית של יויו לדירה הריקה''
@@ -14014,7 +14022,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 קצת אחרי יום השנה למותה של [[אימא של יויו|דינה זכרה לברכה]] נסעתי לבקר אותו בפריז. הם עברו לדירה ענקית שנפלה לידיהם במחיר נמוך מאוד וריקה מכל תוכן. בהחלט עניין של מזל. זו דירה שגודלה שלוש מאות מטרים רבועים, מלבן של 25/12 לא כולל המרפסת. היא נמצאת בקומה שנייה בבניין רחב מתחת למונמרטרה. הם סידרו אותה מאפס כולל קירות וכולל החלפת כל החשמל והאינסטלציה שהיו במצב מסוכן, ובתמורה קיבלו את החוזה הזה לשלוש שנים או עד שיימצא פתרון לדירה, שאף אחד לא רצה להתעסק איתה בשלב זה מסיבה שלא סופרה להם. יויו, גורה ודןדן לא נכנסו לשאלות בעניין הדירה. הם באו לראות אותה דרך עורך דין שנהג לאכול בקוסקוס, וברגע שנכנסו הייתה להם הרגשה טובה, והגודל או העונק, קראו לזה איך שקראו לזה, היממו אותם והם סגרו חוזה. הם עבדו חודש וחצי סביב השעון בלי לעצור כולל העבודה אצל [[ז'נבייב]]. [[יויו]] נדלק. הוא מצא תוכנה חינמית לעיצוב פנים והלך על זה בכל הכוח. הם לקחו לימים האלה חמישה [[עובדים סינים|הסינים]], שעבדו בעבר עבור ז'נבייב. את עבודתם הפיק בפועל [[אלפרד]] לפי הוראות מסודרות של [[יויו]]. הסינים היו מקצוענים. בערבים כשחזרו מהעבודה המשיכו עוד כמה שעות. מדי ערב יויו עבר על כל דבר. בדק, ניקה, שייף מה שצריך, [[ודןדן|דןדן]] איתו. הם חילקו את הדירה לשלושה חלקים. בחלק האמצעי, לטובתו הקצו 120 מטרים רבועים, בנו מטבח וסלון, חדר שירות, מקלחת ושירותים. בשני האחרים, שגודלם היה 80 מטרים רבועים, הוסיפו רק חדרי אמבטיה ושירותים והשאירו הכול פתוח. בכל חדר יש צד שפונה אל הרחוב ובו חלון ענקי ולכל אלה מרפסת אחת גדולה. קירות הגבס שבנו היו בכל מיני אלכסונים שתוכננו בסימטריה מלאה וצבועים כולם לבן. לכל אחד מהחדרים, לעומת זאת, אריחים רבועים בצבע שונה. בסלון ובמטבח המרצפות ירוקות, בחדר של גורה ודןדן צהובות ואצל יויו תכולות. במבואת הכניסה הן בחרדל ואדום. על המרפסת שבחזית הדירה, שמרוצפת במרצפות שיש בגדלים שונים ובצורות שונות, בנוי חדר נוסף שגודלו 18 מטרים רבועים. החדר שימש בעבר [[כקליניקה|הקליניקה]] של רופא ולו יציאה לרחוב. הוא כולל חדר שירותים קטן וחמים המאובזר בטוש ובכיור. 
 
-&lt;&lt;englink [[the wishing star 01]]&gt;&gt;</pre>
+&lt;&lt;englink [[Wishing star 01]]&gt;&gt;</pre>
 </div>
 <div created="20171029153626721" modified="20171204153847789" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 02">
 <pre>[img[pictures/cochav-2.jpg]]
@@ -15801,7 +15809,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20200319131749847" modified="20200320101412826" tags="מוזיקה סרטים [[אחיות חוץ]] סגירים" title="מיילס דיוויס">
+<div created="20200319131749847" modified="20200322170544606" tags="מוזיקה סרטים [[אחיות חוץ]] סגירים" title="מיילס דיוויס">
 <pre>
 [img[pictures/miles-davis.jpg]]
 
@@ -15834,7 +15842,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Mimi of Alfred]]&gt;&gt;</pre>
 </div>
-<div created="20170502201030702" modified="20170702001628119" tags="HH" title="מיצפרש">
+<div created="20170502201030702" modified="20200322165747939" tags="HH" title="מיצפרש">
 <pre>[img[pictures/mizperesh.jpg]]
 
 !!![[יויו]]:
@@ -15843,7 +15851,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הוא התחיל מבוטקה על דונם שקנה באזור שפך האסדה, ותוך שנה הפך את השטח למפעל קטן ומצליח.
 
-הקיר הצפוני של המפעל הוא מקום בו הנוער נוהג לצייר [[גרפיטי|לצייר גרפיטי וירטואלי במִיצְפֶּרֶש]]. משה מוכר פוטאג' של מצלמות האבטחה שם לסטארטאפים של [[זיהוי ביומטרי|https://no2bio.org]]. יש לו חוש טבעי לתאורת אינפרא אדום דרמטית. רבים בתעשיה הבטחונית רואים במשה אמן וידאו אלטרנטיבי.</pre>
+הקיר הצפוני של המפעל הוא מקום בו הנוער נוהג לצייר [[גרפיטי|לצייר גרפיטי וירטואלי במִיצְפֶּרֶש]]. משה מוכר פוטאג' של מצלמות האבטחה שם לסטארטאפים של [[זיהוי ביומטרי|https://no2bio.org]]. יש לו חוש טבעי לתאורת אינפרא אדום דרמטית. רבים בתעשיה הבטחונית רואים במשה אמן וידאו אלטרנטיבי.
+
+
+
+&lt;&lt;englink [[Genejuice]]&gt;&gt;</pre>
 </div>
 <div created="20170614165341450" modified="20200320095302439" tags="[[אחיות חוץ]] מוזיקה סרטים סגירים" title="מישל גונדרי">
 <pre>[img[pictures/michel-gondry.jpg]]
@@ -15971,12 +15983,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Restaurants]]&gt;&gt;</pre>
 </div>
-<div created="20170507173634371" modified="20170507220735840" tags="HH" title="מספרה">
+<div created="20170507173634371" modified="20200322165242806" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
 
 !!![[גורה]]:
 
-במספרה נמצאת [[אנה|הספרית]], שידיה ידי זהב.</pre>
+במספרה נמצאת [[אנה|הספרית]], שידיה ידי זהב.
+
+
+
+
+&lt;&lt;englink [[The barber shop]]&gt;&gt;</pre>
 </div>
 <div created="20170320163938974" modified="20200313120707620" tags="HH" title="מערכת העיתון">
 <pre>[img[pictures/maarechet-haiton.jpg]]
@@ -16442,16 +16459,21 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Technical director]]&gt;&gt;</pre>
 </div>
-<div created="20170629191152497" modified="20200215174738961" tags="[[משפחת באומן]] בתים" title="סבתא שלנו">
+<div created="20170629191152497" modified="20200322170434862" tags="[[משפחת באומן]] בתים" title="סבתא שלנו">
 <pre>[img[pictures/savta-shelanu.jpg]]
 
 !!![[יויו]]:
 
 זו תמיד תישאר תעלומה, למרות שיש אפשרויות לתשובה, אבל זו בהחלט שאלה - איך מאדם שמח, טוב לב וסבלני כמו סבתא יצאה אישה כמו [[אימא שלנו|דינה זכרה לברכה]].
 
+
+
+
+&lt;&lt;englink [[Our grandma]]&gt;&gt;
+
 </pre>
 </div>
-<div created="20200318190000717" modified="20200320101553527" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]]" title="סגירים">
+<div created="20200318190000717" modified="20200322170510926" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]]" title="סגירים">
 <pre>
 [img[pictures/closers.jpg]]
 
@@ -17250,12 +17272,16 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20170319172108447" modified="20170507182033195" tags="HH" title="עורכת הדין">
+<div created="20170319172108447" modified="20200322164450395" tags="HH" title="עורכת הדין">
 <pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
 
 !!![[גורה]]:
 
-ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
+ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.
+
+
+
+&lt;&lt;englink [[The lawyer]]&gt;&gt;</pre>
 </div>
 <div created="20170522171825469" modified="20200215102644329" tags="[[בחוות החיות]]" title="עושים שלום">
 <pre>[img[pictures/clavzirim-osim-shalom.jpg]]
@@ -19161,7 +19187,7 @@ Fapina''
 
 &lt;&lt;englink [[The sisters' questionnaire]]&gt;&gt;</pre>
 </div>
-<div created="20161026213244448" modified="20170507182847514" tags="HH" title="שָה נוּאָר">
+<div created="20161026213244448" modified="20200322164831955" tags="HH" title="שָה נוּאָר">
 <pre>ב[[ים טתיס]] אין כיסוי סלולרי או אינטרנט, אבל ב[[געזונטהייטס]] יש
 [[מגדל סלולרי מקומי|https://en.wikipedia.org/wiki/OpenBTS]]
 שמספק לדיירים טלפוניה ביניהם, וגישה ל[[אינטראנט|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%90%D7%A0%D7%98]], שזו מילה קצת גדולה בשביל רשת שמכילה שרת אחד בלבד. לשרת הזה קוראים שָה נוּאָר. ממעמקי [[המרתף של סטלין]] הוא מספק עולם דיגיטלי קסום וארכאי (כאילו צוקרברג וסנואודן לא היו מעולם): פורום, מערכת בלוגים, וויקי, ואפילו [[מערכת רדיו מקוון|https://en.wikipedia.org/wiki/Icecast]] שבאמצעותה אפשר להאזין ל[[גלי זחל]] — תחנת הרדיו של [[חנות התקליטים|חנות דיסקים]].
@@ -19384,14 +19410,18 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161024202738061" modified="20170507181453094" tags="HH" title="שלום">
+<div created="20161024202738061" modified="20200322164056686" tags="HH" title="שלום">
 <pre>[img[pictures/shalom.jpg]]
 
 !!![[גורה]]:
 
 שלום הוא הבעלים של [[געזונטהייטס]].  הוא גבר בן ששים כמעט. אדם אמיד, שכל הונו מירושה שירש.
 הוא טוב מראה, טוב לב, חביב על הבריות, חסר חוש עסקי, בעל חוש אומנותי ואף יוצר בעצמו, חובב נשים (אך לא רודף שמלות).
-שלום גר בקומה חמש בבניין, ובקומה מעליו הוא חולק סטודיו עם מסאז'יסטית ואומנית נוספת.</pre>
+שלום גר בקומה חמש בבניין, ובקומה מעליו הוא חולק סטודיו עם מסאז'יסטית ואומנית נוספת.
+
+
+&lt;&lt;englink [[Shalom]]&gt;&gt;
+</pre>
 </div>
 <div created="20180325202247142" modified="20200225182856472" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="שלום חנוך">
 <pre>[img[pictures/shalom-chanoch.jpg]]
