--- a/english.html
+++ b/english.html
@@ -9009,7 +9009,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200322151526687" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200323063116271" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9038,7 +9038,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200322163504771" title="$:/temp/search">
+<div created="20161023184814872" modified="20200323062828401" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9376,14 +9376,14 @@ To let the back lengthen and widen.
 
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
 </div>
-<div created="20200215135137601" modified="20200220184202345" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]]" title="Alfred">
+<div created="20200215135137601" modified="20200323062926001" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]]" title="Alfred">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[Gura]]:
 
 Some things take time. It took me a while to be able to try painting Alfred and writing about him, but Alfred is an inseparable part of my life and [[our life|Coen Sisters]]. When he walks into a room, a warm kind cloud comes along. He [[suffered|Dangerous]] many times during his life, and still, he stayed a man with a pure heart.
 
-We met in Paris, in theater studies. We became a couple. I wanted him so badly, he left me, I got hurt, we came back, I got wounded, I was in coma, I woke up from the coma three weeks later, dumped him, [[Yoyo]] kept in touch with him, [[our mother|Yoyo and Gura]] passed away, Dandan and I [[went to India|Searching for Iry]] to bring [[Iry]] back, we came back, we moved into [[the apartment|the wishing star 01]], I forgave Alfred, things were good, [[Dandan went]], I fell apart again, he carefully watched over me, also his [[dad|Jozef Abaroa]].
+We met in Paris, in theater studies. We became a couple. I wanted him so badly, he left me, I got hurt, we came back, I got wounded, I was in coma, I woke up from the coma three weeks later, dumped him, [[Yoyo]] kept in touch with him, [[our mother|Yoyo and Gura]] passed away, Dandan and I [[went to India|Searching for Iry]] to bring [[Iry]] back, we came back, we moved into [[the apartment|Wishing star 01]], I forgave Alfred, things were good, [[Dandan went]], I fell apart again, he carefully watched over me, also his [[dad|Jozef Abaroa]].
 
 He's smart, talented, diligent, curious, he smiles a lot- even though I chose to paint him focused on the computer and not smiling. He's not aware of his own esteem, including not knowing how hot he is. 
 
@@ -10130,7 +10130,7 @@ Maybe now, us,  the residents of Toontown, will get the ending that we deserve, 
 
 </pre>
 </div>
-<div created="20180915085721246" modified="20200220181714788" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200323063020784" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -10146,7 +10146,7 @@ Maybe now, us,  the residents of Toontown, will get the ending that we deserve, 
 
 Hello,
 
-In December 2015, 10 days after Gura, Dandan and I moved into [[the apartment|the wishing star 01]], we had friends over for the [[Christmas dinner]].
+In December 2015, 10 days after Gura, Dandan and I moved into [[the apartment|Wishing star 01]], we had friends over for the [[Christmas dinner]].
 It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wobbling, crazy happy with myself.
 
 For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the [[9-side-wishing-star]]:
@@ -10762,8 +10762,7 @@ Or as Alfred used to say:
  &lt;&lt;heblink [[דיור מוגז]]&gt;&gt;</pre>
 </div>
 <div created="20200322165333453" modified="20200322165640788" tags="HH" title="Genejuice">
-<pre>
-[img[pictures/mizperesh.jpg]]
+<pre>[img[pictures/mizperesh.jpg]]
 
 
 
@@ -11176,8 +11175,17 @@ The [[Hora|https://en.wikipedia.org/wiki/Hora_(dance)]] is danced in a [[circle|
 
 </pre>
 </div>
-<div created="20200212223417925" modified="20200212224353147" tags="Kitchens" title="Houses">
+<div created="20200212223417925" modified="20200323062846128" tags="Kitchens" title="Houses">
 <pre>[img[pictures/batim.jpg]]
+
+
+[[Home, is where I want to be But I guess I'm already there|https://www.youtube.com/watch?v=cUEiMQfSrZw]]
+
+[[David Byrne]]
+
+
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Houses]]&quot;&gt;&gt;
 
@@ -12572,8 +12580,7 @@ I've met my only father, after many years we haven't met. This picture was taken
  &lt;&lt;heblink [[אבינו]]&gt;&gt;</pre>
 </div>
 <div created="20200322170149384" modified="20200322170314234" tags="[[The Baumans]] Mothers Houses" title="Our grandma">
-<pre>
-[img[pictures/savta-shelanu.jpg]]
+<pre>[img[pictures/savta-shelanu.jpg]]
 
 
 
@@ -13169,8 +13176,7 @@ Everything will be clarified''
 </pre>
 </div>
 <div created="20200322163727748" modified="20200322163956274" tags="HH" title="Shalom">
-<pre>
-[img[pictures/shalom.jpg]]
+<pre>[img[pictures/shalom.jpg]]
 
 
 
@@ -13478,8 +13484,7 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 </pre>
 </div>
 <div created="20200322165857658" modified="20200322170009109" tags="HH" title="Tethys ocean">
-<pre>
-[img[pictures/tethys-sea.jpg]]
+<pre>[img[pictures/tethys-sea.jpg]]
 
 
 
@@ -13496,8 +13501,7 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
 <div created="20200322164751976" modified="20200322165142324" tags="HH" title="The barber shop">
-<pre>
-[img[pictures/hamispara.jpg]]
+<pre>[img[pictures/hamispara.jpg]]
 
 
 
@@ -13793,8 +13797,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 </pre>
 </div>
 <div created="20200322164140601" modified="20200322164320569" tags="HH" title="The lawyer">
-<pre>
-[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
+<pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
 
 
 
@@ -14099,11 +14102,11 @@ When they talked about his mother- who demanded his extermination- [[Dr. Melfi|h
 
 </pre>
 </div>
-<div created="20200202164120005" modified="20200220172230172" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
+<div created="20200202164120005" modified="20200323063052500" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
 <pre>[img[pictures/hazevet.jpg]]
 
 
-The team is us, who live in the renovated rental contract [[apartment|the wishing star 01]], meaning [[Yoyo]], [[Iry]] and [[Gura]], that in our leisure hours we bake, cook and also write the recipes.
+The team is us, who live in the renovated rental contract [[apartment|Wishing star 01]], meaning [[Yoyo]], [[Iry]] and [[Gura]], that in our leisure hours we bake, cook and also write the recipes.
 
 
 &lt;&lt;list-links filter:&quot;[tag[The team]]&quot;&gt;&gt;
