--- a/english.html
+++ b/english.html
@@ -9009,7 +9009,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200323063116271" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200323153550302" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9018,7 +9018,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="F.M.Alexander [[Lotus books]] [[Mental generation]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9038,7 +9038,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200323062828401" title="$:/temp/search">
+<div created="20161023184814872" modified="20200323153525006" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10586,9 +10586,13 @@ I want to think that David Bowie returned to his star peacefully, and by that ac
 
 </pre>
 </div>
-<div created="20200225173541221" modified="20200225173922751" tags="[[Outer sisters]] [[Iry claims]]" title="F.M.Alexander">
+<div created="20200225173541221" modified="20200323153554184" tags="[[Outer sisters]] [[Iry claims]]" title="F.M.Alexander">
 <pre>[img[pictures/f-m-alexander.jpg]]
 
+
+!!![[Iry]]:
+
+As a young actor [[Alexander|https://en.wikipedia.org/wiki/F._Matthias_Alexander]] tended to get a hoarse voice when he was performing. He started investigating the phenomenon and developed the [[technique|Alexander Technique]].
 
 
 
@@ -11963,9 +11967,12 @@ The end
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200226093936725" modified="20200226094207815" tags="[[Here in the Ghetto]] [[True stories]]" title="Lotus books">
+<div created="20200226093936725" modified="20200323153107616" tags="[[Here in the Ghetto]] [[True stories]]" title="Lotus books">
 <pre>[img[pictures/lotus.jpg]]
 
+!!![[Tomer]]:
+
+[[Lotus bookstore RIP|https://book-store-1586.business.site/]] used to reside in 101 Allenby street.  It belonged to a family that loved to read. It was so difficult that day in the beginning of July when I was walking in Allenby and saw that Lotus has closed down. I still pinch myself every time I pass it by and understand that it’s an horror that comes from reality. 
 
 
  &lt;&lt;heblink [[לוטוס ספרים]]&gt;&gt;</pre>
@@ -12172,13 +12179,13 @@ meaning
  &lt;&lt;heblink [[האחיות בלות]]&gt;&gt;
 </pre>
 </div>
-<div created="20200303102617862" modified="20200322151747079" tags="[[Monkeys with car keys]]" title="Mental generation">
+<div created="20200303102617862" modified="20200323152650861" tags="[[Monkeys with car keys]]" title="Mental generation">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
 !!![[Gura]]:
 
-This generation is carrying on his back generations and generations of unconscious and untreated humanity. These children who are called generation Z, the screen generation, are the ones who remind us every day and ask us to understand that the psyche has also been through an evolution. A hundred years since Freud had started to wake us from the psychic coma we’ve been stuck in. This generation is diagnosed, angry, is aware of its rights as a child and citizen, acknowledges the rights of the other and of whomever is different,  and is dealing with a huge and unidentified mass that is blowing up in its face. This generation is raging and yelling in certain freedom [[ever since generation X|https://www.youtube.com/watch?v=lldS41Px5_s]]. 
+This generation is carrying on his back generations and generations of unconscious and untreated humanity. These children who are called generation Z, the screen generation, are the ones who remind us every day and ask us to understand that the psyche has also been through an evolution. Over a hundred years since Freud had started to wake us from the psychic coma we’ve been stuck in. This generation is diagnosed, angry, is aware of its rights as a child and citizen, acknowledges the rights of the other and of whomever is different,  and is dealing with a huge and unidentified mass that is blowing up in its face. This generation is raging and yelling in certain freedom [[ever since generation X|https://www.youtube.com/watch?v=lldS41Px5_s]]. 
 
 
  &lt;&lt;heblink [[דור הנפש]]&gt;&gt;</pre>
