--- a/index.html
+++ b/index.html
@@ -9192,7 +9192,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דיוויד בואי]] פ.מ.אלכסנדר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9212,7 +9212,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200322170541255" title="$:/temp/search">
+<div created="20161023184814872" modified="20200324112920161" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12019,7 +12019,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20200320092854090" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים סגירים" title="דיוויד בואי">
+<div created="20170105154405192" modified="20200324113138834" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים סגירים" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -12033,7 +12033,7 @@ Is where I want to be
 
 דיוויד בואי הוא אולי האדם הכי חייזרי במובן הטוב ביותר של המילה, ששהה על הכדור הזה בתקופה הזו, והוא היה הכי שאפשר מכל בחינה שהיא, כולל [[המגדר הלא מוגדר|גבריאל פורה]]. הרעיון שכדור הארץ הוא בעצם [[גלות]] תפס אותי. לא פעם חשבתי שיכול להיות שהנשמה יכולה להתגלגל בין כוכבים במרחב האינסופי. כשהייתי ילדה נהגתי לספור את נקודות החן שעל גופי, וחשבתי שבטח החיבור ביניהן הוא צורתו של הכוכב ממנו הגעתי. עד כיתה ב' היו לי 27 נקודות חן, ובערך אז הפסקתי לספור. 
 
-מצחיק שבאחת מהארוחות שהיו בחג, שיחקנו מן משחק כזה – לו היו נותנים לך לחיות את חייו של מישהו אחר, את חייו של מי היית רוצה לחיות, ויויו אמר מיד: דייוויד בואי. הרעיון כל כך מצא חן בעיני עד שאימצתי אותו, ולמרות שאמרתי שהייתי רוצה להיות [[פרדריק מתיאס אלכסנדר|פ.מ.אלכסנדר]], בואי נשמע לי הרבה יותר כייף. 
+מצחיק שבאחת מהארוחות שהיו בחג, שיחקנו מן משחק כזה – לו היו נותנים לך לחיות את חייו של מישהו אחר, את חייו של מי היית רוצה לחיות, ויויו אמר מיד: דייוויד בואי. הרעיון כל כך מצא חן בעיני עד שאימצתי אותו, ולמרות שאמרתי שהייתי רוצה להיות [[פרדריק מתיאס אלכסנדר|פ.מ.אלכסנדר]], בואי נשמע לי הרבה יותר האנקי דורי. 
 
 
 
@@ -15810,8 +15810,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20200319131749847" modified="20200322170544606" tags="מוזיקה סרטים [[אחיות חוץ]] סגירים" title="מיילס דיוויס">
-<pre>
-[img[pictures/miles-davis.jpg]]
+<pre>[img[pictures/miles-davis.jpg]]
 
 !!![[יויו]]
 
@@ -16474,8 +16473,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20200318190000717" modified="20200322170510926" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]]" title="סגירים">
-<pre>
-[img[pictures/closers.jpg]]
+<pre>[img[pictures/closers.jpg]]
 
 !!![[גורה]]:
 
